--- a/src/app/components/post/post-list/post-list.component.html
+++ b/src/app/components/post/post-list/post-list.component.html
@@ -1,1 +1,168 @@
-<p>post-list works!</p>
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-8">
+            <!--Start Main -->
+            <div class="card">
+
+                <div class="card-body">
+                    <h4 class="card-title">Mua Bán Bất Động Sản </h4>
+                    <!-- Start Form Tìm Kiếm -->
+                    <!-- <form action=""> -->
+                    <div>
+                        <input type="text" placeholder="search" class="form-control">
+                    </div>
+
+                    <div class="row mt-2">
+                        <div class="col">
+                            <select class="form-control">
+                                                    <option>--Toàn Quốc--</option>
+                                                    <option>Đà Nẵng</option>
+                                                  </select>
+                        </div>
+                        <div class="col">
+                            <select class=" form-control ">
+                                                <option>--Danh Mục--</option>
+                                              </select>
+                        </div>
+                    </div>
+
+                    <div class="row mt-2">
+                        <div class="col">
+                            <h6>Tất cả Cá nhân / Tổ chức</h6>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-secondary btn-sm float-right"><i class="fas fa-filter"></i> Lọc nâng cao</button>
+                            <button type="button" class="btn btn-warning btn-sm float-right mr-1"><i class="fas fa-search"> </i> Tìm Kiếm</button>
+
+                        </div>
+                    </div>
+                    <!-- </form> -->
+                    <!-- End Form Tìm Kiếm -->
+                    <hr>
+
+                    <!-- Start List Bài đăng -->
+                    <div class="card-deck">
+                        <div class="card">
+                            <img class="card-img-top" src="https://cdn.chotot.com/a6nsbINEnlXtohlbmqAlHN1HdxMA9dbQnDRFjdX04VU/preset:listing/plain/8651904829.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">[Cần Bán] Bán Lô Đất ... 5,0000,0000,0000 VND</h5>
+
+                                <div>
+                                    <small class="text-muted">tại Hà Nội</small>
+                                </div>
+                                <div>
+                                    <small class="text-muted">2017-02-28</small>
+                                </div>
+                                <div class="d-flex">
+                                    <small class="text-muted mr-auto">Lượt xem 1</small>
+                                    <small class="text-muted">Cá Nhân</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="https://cdn.chotot.com/a6nsbINEnlXtohlbmqAlHN1HdxMA9dbQnDRFjdX04VU/preset:listing/plain/8651904829.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">[Cần Bán] Bán Lô Đất ... 5,0000,0000,0000 VND</h5>
+
+                                <div>
+                                    <small class="text-muted">tại Hà Nội</small>
+                                </div>
+                                <div>
+                                    <small class="text-muted">2017-02-28</small>
+                                </div>
+                                <div class="d-flex">
+                                    <small class="text-muted mr-auto">Lượt xem 1</small>
+                                    <small class="text-muted">Cá Nhân</small>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card-img-top" src="https://cdn.chotot.com/a6nsbINEnlXtohlbmqAlHN1HdxMA9dbQnDRFjdX04VU/preset:listing/plain/8651904829.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">[Cần Bán] Bán Lô Đất ... 5,0000,0000,0000 VND</h5>
+
+                                <div>
+                                    <small class="text-muted">tại Hà Nội</small>
+                                </div>
+                                <div>
+                                    <small class="text-muted">2017-02-28</small>
+                                </div>
+                                <div class="d-flex">
+                                    <small class="text-muted mr-auto">Lượt xem 1</small>
+                                    <small class="text-muted">Cá Nhân</small>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End List Bài đăng -->
+                </div>
+
+            </div>
+            <!--End Main -->
+        </div>
+
+        <div class="col-3">
+
+            <!--Start Top 5 Xem nhiều nhất -->
+            <div class="card">
+                <div class="card-header" id="cardTop5">
+                    <i class="fas fa-th-list"></i> Top 5 bài xem nhiều nhất
+                </div>
+                <div class="card-body">
+                    <div>
+                        <h6 class="m-0">Cần Bán Nhà Gấp</h6>
+                        <div>
+                            <small class="text-muted">tại Hà Nội | Ngày đăng: 2017-02-27 >  </small>
+                        </div>
+                    </div>
+
+                    <div class="mt-2">
+                        <h6 class="m-0">Cần Bán Nhà Gấp</h6>
+                        <div>
+                            <small class="text-muted">tại Hà Nội | Ngày đăng: 2017-02-27 >  </small>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <h6 class="m-0">Cần Bán Nhà Gấp</h6>
+                        <div>
+                            <small class="text-muted">tại Hà Nội | Ngày đăng: 2017-02-27 >  </small>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <h6 class="m-0">Cần Bán Nhà Gấp</h6>
+                        <div>
+                            <small class="text-muted">tại Hà Nội | Ngày đăng: 2017-02-27 >  </small>
+                        </div>
+                    </div>
+                    <div class="mt-2">
+                        <h6 class="m-0">Cần Bán Nhà Gấp</h6>
+                        <div>
+                            <small class="text-muted">tại Hà Nội | Ngày đăng: 2017-02-27 >  </small>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!--End Top 5 Xem nhiều nhất -->
+
+            <!-- Start Hướng ưa thích -->
+            <div class="card mt-4">
+                <div class="card-header" id="cardDirectionFavourite">
+                    <i class="fas fa-road"></i> Hướng ưa thích
+                </div>
+                <div class="card-body">
+                    <p class="m-0"> Đông <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Đông Nam <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Tây Nam <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Tây <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Nam <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Bắc <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Tây Bắc <span style="color: red;">80</span> lượt xem</p>
+                    <p class="m-0"> Đông Bắc <span style="color: red;">80</span> lượt xem</p>
+
+                </div>
+
+            </div>
+            <!-- End Hướng ưa thích -->
+        </div>
+    </div>
