--- a/src/app/components/post/post-detail/post-detail.component.html
+++ b/src/app/components/post/post-detail/post-detail.component.html
@@ -1,1 +1,105 @@
-<p>post-detail works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>Bán lô đất cần bán</h1>
+        <div class="card mb-3" style="max-width: 1000px;">
+                        <div class="row no-gutters">
+                          <div class="col-md-5 mt-4">
+                                <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                                        <div class="carousel-inner" >
+                                          <div class="carousel-item active">
+                                            <img src="https://d34zoy7mey8f6f.cloudfront.net/bds/12e650e0-d6bd-4f88-8547-b07a60b6b3fa.jpg"
+                                            style="height: 300px;"
+                                             class="d-block w-100" alt="...">
+                                             
+                                        </div>
+                                          <div class="carousel-item">
+                                            <img src="https://d34zoy7mey8f6f.cloudfront.net/bds/ca47bb5e-3d3b-4efe-a7c0-e6cdd3a0e3c4.jpg"style="height: 300px;" class="d-block w-100" alt="...">
+                                          </div>
+                                          <div class="carousel-item">
+                                            <img src="https://d34zoy7mey8f6f.cloudfront.net/bds/12e650e0-d6bd-4f88-8547-b07a60b6b3fa.jpg"style="height: 300px;" class="d-block w-100" alt="...">
+                                          </div>
+                                        </div>
+                                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Previous</span>
+                                        </a>
+                                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                          <span class="sr-only">Next</span>
+                                        </a>
+                                      </div>
+                          </div>
+                          <div class="col-md-4">
+                            <div class="card-body">
+                             
+                              <p class="card-text">Ngày Đăng:<small class="text-muted"> 20/11/2019</small></p>
+                              <p class="card-text">Vùng Miền<small class="text-muted"> Đà Nẵng</small></p>
+                              <p class="card-text">Hướng:<small class="text-muted"> Đông</small></p>
+                              <p class="card-text">Tinh Trạng:<small class="text-muted"> Mới</small></p>
+                              <p class="card-text">Địa Chỉ:<small class="text-muted"> Đà Nẵng</small></p>
+                              <p class="card-text">Diện Tích:<small class="text-muted"> 100m2</small></p>
+                              <p class="card-text">Gía:<small class="text-muted"> 5000000000 vnd</small></p>
+
+                            </div>
+                          </div>
+                          <div class="col-md-3">
+                                <h2>Thông tin liên hệ</h2>
+                                <p class="card-text">Họ Và Tên:<small class="text-muted"> dailalle</small></p>
+                                <p class="card-text">Email:<small class="text-muted"> daila@gmail.com</small></p>
+                                <p class="card-text">Số điện thoại:<small class="text-muted"> 3838383838</small></p>
+                                <p class="card-text">Địa chỉ:<small class="text-muted"> daila hoa son</small></p>
+
+                          </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                            Nội Dung Bài Đăng
+                            </div>
+                            <div class="card-body">
+                                <p class="text-monospace">đất nền hợp phong thủy</p>
+                            </div>
+                          </div>
+                        <div class="card text-right">
+                                <div class="card-body">
+                                  <form action="comment" method="post">
+                                        <div class="form-group">
+                                            
+                                                <textarea class="form-control" id="exampleFormControlTextarea1" name="noidung" rows="3"></textarea>
+                                              </div>
+                                  <a href="#" class="btn btn-primary">Bình luận</a>
+                                </form>
+                                </div>
+                              </div>
+                              <div class="card" >
+                                    <div class="card-header">
+                                      Nội dung bình luận
+                                    </div>
+                                  
+                                     <div class="card mb-3" >
+                                    <div class="row no-gutters">
+                                      
+                                      <div class="col-md-1">
+                                        <img src="https://www.dammio.com/wp-content/uploads/2016/10/image_circle_bootstrap.png" class="img-circle" alt="Hot girl" width="80" >
+                                      </div>
+                                      <div class="col-md-11">
+                                          <tr  *ngFor="let commentpost of commentposts">
+                                        <div class="card-body">
+                                          <p class="card-title">ngày đăng:{{commentpost.created_at}}</p>
+                                         
+                                    
+                                          <p class="card-text">{{commentpost.commentContent}}</p>
+                                       
+                                        </div>
+                                      </tr>
+                                      </div>
+                                    </div>
+</div>
+                                  </div>
+                                  
+                      </div>
+
+        </div>
+       
+    </div>
+</div>
