update post-confirm lan 2

--- a/src/app/components/post/post-add/post-add.component.html
+++ b/src/app/components/post/post-add/post-add.component.html
@@ -65,7 +65,7 @@
                                 <div class="form-group row">
                                     <label for="inputPassword" class="col col-sm-2 col-form-label">Vùng miền:  </label>
                                     <div class="col">
-                                        <select class="form-control form-control-sm" formControlName="directionId">
+                                        <select class="form-control form-control-sm" formControlName="regionId">
                                                 <option value="1">--Hà Nội--</option>
                                                 <option value="2">--Huế--</option>
                                                 <option value="3">--Đà Nẵng--</option>
