update create new Posts

--- a/src/app/components/post/post-confirm/post-confirm.component.html
+++ b/src/app/components/post/post-confirm/post-confirm.component.html
@@ -14,34 +14,34 @@
                             <div class="form-group row">
                                 <label for="inputPassword" class="col col-sm-2 col-form-label">Danh mục: </label>
                                 <div class="col">
-                                    {{data.categoryId}}
+                                    {{category}}
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputPassword" class="col col-sm-2 col-form-label">Vùng miền:  </label>
                                 <div class="col">
-                                    {{data.regionId}}
+                                    {{region}}
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputPassword" class="col col-sm-2 col-form-label">Bạn Là: </label>
                                 <div class="col d-flex">
-                                    {{data.sellerId}}
+                                    {{seller}}
                                 </div>
                             </div>
 
                             <div class="form-group row">
                                 <label for="inputPassword" class="col col-sm-2 col-form-label">Hướng: </label>
                                 <div class="col d-flex">
-                                    {{data.directionId}}
+                                    {{direction}}
                                 </div>
 
                             </div>
 
                             <div class="form-group row">
-                                <label for="inputPassword" class="col col-sm-2 col-form-label">[{{data.postOfType}}] </label>
+                                <label for="inputPassword" class="col col-sm-2 col-form-label">[{{postOftype}}] </label>
                                 <div class="col d-flex">
 
                                     {{data.title}}
@@ -53,7 +53,7 @@
                                 <label for="inputPassword" class="col col-sm-2 col-form-label">Tình trạng: </label>
                                 <div class="col d-flex">
 
-                                    {{data.statusOfPostId}}
+                                    {{statusOfPost}}
                                 </div>
 
                             </div>
