khong co thay doi gi dac biet

--- a/src/app/components/post/demo-button-search-post-advanced/demo-button-search-post-advanced.component.html
+++ b/src/app/components/post/demo-button-search-post-advanced/demo-button-search-post-advanced.component.html
@@ -1,4 +1,3 @@
 <p>demo-button-search-post-advanced works!</p>
-<button [routerLink]="['/post/searchPostGeneral/']" mat-raised-button color="primary" (click)="openDialog()">Tìm kiếm
-    nâng
-    cao</button>
+<button [routerLink]="['/post/searchPostGeneral/']" mat-raised-button color="primary" (click)="openDialog()">
+    Tìm kiếm nâng cao</button>
