--- a/src/app/components/post/search-post-general-result/search-post-general-result.component.html
+++ b/src/app/components/post/search-post-general-result/search-post-general-result.component.html
@@ -1,8 +1,8 @@
-<div>
-    <button [routerLink]="['/post/searchPostGeneralResult/']">aaa</button>
+<div class="row">
+    <button [routerLink]="['/post/list/']">Chuyen trang</button>
 </div>
 
-<h1>Danh sach bai viet</h1>
+<h1>Ket qua tim kiem</h1>
 
 <div class="container">
     <div class="row mt-5">
