--- a/src/app/components/post/post-success/post-success.component.html
+++ b/src/app/components/post/post-success/post-success.component.html
@@ -9,6 +9,6 @@
         <p class="card-text">Chân thành cảm ơn !</p>
     </div>
     <div class="">
-        <button type="button" class="btn btn-warning float-right m-4">Quay Lại Trang chủ</button>
+        <button [routerLink]="['/post/list']" routerLinkActive="router-link-active" type="button" class="btn btn-warning float-right m-4">Quay Lại Trang chủ</button>
     </div>
 </div>
