--- a/src/app/components/Register/register.component.css
+++ b/src/app/components/Register/register.component.css
@@ -1,6 +1,6 @@
 .signin-big {
-    background-color: rgb(236, 236, 236);
-    height: 625px;
+    /* background-color: rgb(236, 236, 236);     */
+    /* height: 625px; */
     min-height: 300px;
 }
 
