--- a/src/app/components/login/login-users/login-users.component.html
+++ b/src/app/components/login/login-users/login-users.component.html
@@ -18,6 +18,8 @@
                 <input type="password"  class="form-control" formControlName="password">
             </div>
         </div>
+
+        <p class="container text-center" style="color: red;">{{dataLogin}}</p>
         <div id="checkbox" class="mt-3">
             <input type="checkbox"> Nhớ tài khoản
         </div>
@@ -26,7 +28,7 @@
         </div>
     </form>
         <div  id="sigin">
-            <p>Đăng ký ngay <a [routerLink]="['/singin']" routerLinkActive="router-link-active" >tại đây! </a></p>
+            <p>Đăng ký ngay <a [routerLink]="['/register']" routerLinkActive="router-link-active" >tại đây! </a></p>
         </div>
     </div>
    
