--- a/src/app/components/post/post-detail/post-detail.component.html
+++ b/src/app/components/post/post-detail/post-detail.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <h1>[{{postdetail.post_of_types.postOfTypeName}}] Lô đất 4 mặt tiền</h1>
-        <div class="card mb-3" style="max-width: 1100px;">
+        <div class="card mb-3" style="max-width: 1200px;">
                         <div class="row no-gutters">
                           <div class="col-md-5 mt-3">
                                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -30,7 +30,7 @@
                                         </a>
                                       </div>
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-3">
                             <div class="card-body">
                              
                               <p class="card-text">Ngày Đăng:<small class="text-muted"> {{postdetail.created_at}}</small></p>
@@ -44,16 +44,16 @@
 
                             </div>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-4">
                             <div class="card" >
                                     <div class="card-header">
                                       Thông tin liên hệ người đăng
                                     </div>
                                     <ul class="list-group list-group-flush">
-                                      <label class="list-group-item">Họ Và Tên:dailalle</label>
-                                      <label class="list-group-item">Email:dailalle@gmail.com</label>
-                                      <label class="list-group-item">Số điện thoại: 67676767</label>
-                                      <li class="list-group-item">Địa chỉ: daila hoa son</li>
+                                      <label class="list-group-item">Họ Và Tên:{{postdetail.user.fullName}}</label>
+                                      <label class="list-group-item">Email: {{postdetail.user.email}}</label>
+                                      <label class="list-group-item">Số điện thoại: {{postdetail.user.phoneNumber}}</label>
+                                      <label class="list-group-item">Địa chỉ: {{postdetail.user.address}}</label>
                                     </ul>
                                   </div>
                           </div>
@@ -68,20 +68,13 @@
                           </div>
                         <div class="card text-right">
                                 <div class="card-body">
+                                   
                                   <form action="comment" method="post">
                                         <div class="form-group">
-                                          <div class="form-group">
-                                            <label>userId</label>
-                                            <input type="text" class="form-control" placeholder="userId" #userId>
-                                          </div>
-                                          <div class="form-group">
-                                            <label>postId</label>
-                                            <input type="text" class="form-control" placeholder="postId" #postId>
-                                          </div>
                                         <textarea class="form-control" id="exampleFormControlTextarea1" 
                                         rows="3"#commentContent></textarea>
                                               </div>
-                                  <button class="btn btn-primary"(click)="onadd(userId.value,postId.value,commentContent.value)">Bình luận</button>
+                                  <button class="btn btn-primary"(click)="onadd(commentContent.value);commentContent.value='';refresh()">Bình luận</button>
                                 </form>
                                 </div>
                               </div>
@@ -97,16 +90,18 @@
                                         <img src="https://www.dammio.com/wp-content/uploads/2016/10/image_circle_bootstrap.png" class="img-circle" alt="Hot girl" width="80" >
                                       </div>
                                       <div class="col-md-11">
-                                          <tr  *ngFor="let commentpost of commentposts">
+                                          <tr  *ngFor="let commentpost of commentposts|paginate: paginacomment">
                                         <div class="card-body">
                                           <p class="card-title">ngày đăng:{{commentpost.created_at}}</p>
                                          
                                     
                                           <p class="card-text">{{commentpost.commentContent}}</p>
-                                       
+                                         
                                         </div>
                                       </tr>
+                                     
                                       </div>
+                                      <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
                                     </div>
                                 </div>
                                   </div>
